--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,3 +19,13 @@ build-master:
     - docker push "${CI_REGISTRY_IMAGE}/pazpar2:${PAZPAR2_VERSION}-alpine"
   except:
     - tags
+
+trigger_build:
+  stage: deploy
+  script:
+    - "apk add --no-cache curl"
+    - "curl -X POST -F token=0be37a72f0aa47617ce5e541f20cfb -F ref=master https://gitlab.gwdg.de/api/v4/projects/8486/trigger/pipeline"
+  only:
+    - master
+  except:
+    - tags
